src/test/deca/test_lex/invalid/include_inexistant.deca
// Description:
//    Include un fichier inexistant.
//
//    [Lexicographie], Inclusion de fichier, p55
//    Le fichier à inclure est cherché dans le même répertoire que le fichier source. S’il n’existe pas de fichier
//    avec ce nom dans le répertoire, alors le fichier est cherché dans la bibliothèque standard fournie avec
//    le compilateur, qui est décrite dans le document [BibliothequeStandard].
//
// Resultats:
//     Erreur d'include ligne 15: le fichier n'existe pas
//
// Historique:
//    cree le 05/01/2022

#include "zzz_will_never_exist.decah"